im会话列表  调整头像  名字

--- a/tuikit4.2.52/src/main/res/layout/chat_adapter_text_self.xml
+++ b/tuikit4.2.52/src/main/res/layout/chat_adapter_text_self.xml
@@ -91,7 +91,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="10dp"
-                        android:textColor="#fff"
+                        android:textColor="#000"
                         android:textSize="15sp" />
                 </LinearLayout>
 
