--- a/tuikit4.2.52/src/main/res/layout/bokang_session_adapter.xml
+++ b/tuikit4.2.52/src/main/res/layout/bokang_session_adapter.xml
@@ -20,7 +20,16 @@
             android:layout_marginTop="15dp"
             android:layout_marginLeft="15dp"
             android:layout_width="50dp"
-            android:layout_height="50dp" />
+            android:layout_height="50dp"
+            android:visibility="invisible"/>
+
+        <ImageView
+            android:id="@+id/session_icon_personal"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:visibility="gone" />
 
 
         <TextView
@@ -46,7 +55,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="45dp"
             android:textSize="16sp"
-            tools:text="ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss"
+            tools:text=""
             android:ellipsize="end"
             android:maxLines="2"
             android:textColor="#333333" />
