--- a/common_bokang/src/main/res/layout/delegate_homedoctor_in.xml
+++ b/common_bokang/src/main/res/layout/delegate_homedoctor_in.xml
@@ -19,8 +19,9 @@
         android:layout_height="110dp"
         android:layout_marginTop="1dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include" />
+        app:layout_constraintTop_toBottomOf="@+id/include3" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
