--- a/common_bokang/src/main/res/layout/item_tab_homedoctorin.xml
+++ b/common_bokang/src/main/res/layout/item_tab_homedoctorin.xml
@@ -26,6 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:textSize="14sp"
+        android:maxLength="3"
+        android:maxLines="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_img"
@@ -37,6 +39,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
         android:textSize="12sp"
+        android:maxLength="4"
+        android:maxLines="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
