--- a/common_core/src/main/res/layout/delegate_bottom_with3.xml
+++ b/common_core/src/main/res/layout/delegate_bottom_with3.xml
@@ -15,7 +15,7 @@
         android:id="@+id/bottom_bar"
         android:layout_width="match_parent"
         android:background="@mipmap/background_buttom3"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"/>
 
