--- a/common_tencent_tuikit/src/main/res/layout/chat_fragment_personal_little.xml
+++ b/common_tencent_tuikit/src/main/res/layout/chat_fragment_personal_little.xml
@@ -3,16 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
-        android:textColor="@color/blue"
-        android:background="@color/black"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-   <!-- <com.tencent.qcloud.uikit.business.chat.c2c.view.C2CChatPanel
+   <com.tencent.qcloud.uikit.business.chat.c2c.view.C2CChatPanel
         android:id="@+id/chat_panel"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />-->
+        android:layout_height="match_parent" />
 
 </LinearLayout>
