医生详情，exit（unfinish）

--- a/common_tencent_tuikit/src/main/res/layout/chat_fragment_personal_little.xml
+++ b/common_tencent_tuikit/src/main/res/layout/chat_fragment_personal_little.xml
@@ -1,8 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="@color/white"
+    >
+   <View
+       android:layout_marginStart="15dp"
+       android:background="@color/main_line_default_f5"
+       android:layout_width="match_parent"
+       android:layout_height="1dp"/>
+   <android.support.v7.widget.AppCompatTextView
+       android:id="@+id/tv_describe"
+       android:paddingTop="10dp"
+       android:paddingBottom="10dp"
+       android:paddingStart="15dp"
+       android:paddingEnd="21dp"
+       android:textColor="@color/main_text_black_dark"
+       android:textSize="14sp"
+       tools:text="宋金花医生详情："
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content" />
+</LinearLayout>
    <com.tencent.qcloud.uikit.business.chat.c2c.view.C2CChatPanel
         android:id="@+id/chat_panel"
         android:layout_width="match_parent"
