--- a/common_bokang/src/main/res/layout/delegate_homedoctor_in.xml
+++ b/common_bokang/src/main/res/layout/delegate_homedoctor_in.xml
@@ -13,15 +13,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_top"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginTop="1dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include3" />
+
     <net.lucode.hackware.magicindicator.MagicIndicator
         android:id="@+id/tablayout"
         android:layout_width="match_parent"
         android:layout_height="110dp"
         android:layout_marginTop="1dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include3" />
+        app:layout_constraintTop_toBottomOf="@+id/rv_top" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
