健康自测 开始页面

--- a/common_bokang/src/main/res/values/colors.xml
+++ b/common_bokang/src/main/res/values/colors.xml
@@ -18,5 +18,5 @@
     <color name="text_E8635D">#E8635D</color>
     <color name="text_3DC39A">#3DC39A</color>
     <color name="text_EC8B2F">#EC8B2F</color>
-
+    <color name="text_FDBA63">#fdba63</color>
 </resources>
