--- a/common_bokang/src/main/res/layout/delegate_homedoctor_in.xml
+++ b/common_bokang/src/main/res/layout/delegate_homedoctor_in.xml
@@ -65,7 +65,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cl" />
 
-    <android.support.v4.view.ViewPager
+    <com.lianghanzhen.LazyViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
