--- a/common_ui/src/main/res/values/attrs.xml
+++ b/common_ui/src/main/res/values/attrs.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <declare-styleable name="LazyViewPager">
+        <attr name="init_lazy_item_offset" format="float" />
+    </declare-styleable>
+
+
     <!--AutoPhotoLayout-->
     <declare-styleable name="camera_flow_layout">
         <attr name="max_count" format="integer" />
