--- a/common_bokang/src/main/res/layout/delegate_sign_only_yijia.xml
+++ b/common_bokang/src/main/res/layout/delegate_sign_only_yijia.xml
@@ -1,187 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="64dp"></android.support.v7.widget.Toolbar>
-
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
     <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/login_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="36dp"
-        android:layout_marginTop="11dp"
-        android:gravity="center"
+        android:layout_marginTop="75dp"
         android:text="登录"
-        android:textColor="@color/main_text_orange"
-        android:textSize="@dimen/first_title_20" />
+        android:textColor="@color/light_black"
+        android:textSize="18sp"/>
 
-    <!--电话-->
-    <android.support.v7.widget.LinearLayoutCompat
+    <RelativeLayout
+        android:id="@+id/login_name_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
+        android:layout_below="@id/login_title"
         android:layout_marginLeft="44dp"
-        android:layout_marginTop="58dp"
-        android:layout_marginRight="40dp">
+        android:layout_marginRight="44dp"
+        android:layout_marginTop="60dp">
 
         <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/image_username"
             android:layout_width="14dp"
             android:layout_height="21dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="3dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="23dp"
             android:scaleType="fitXY"
-            android:src="@mipmap/icon_login_phone" />
+            android:src="@mipmap/icon_login_phone"/>
 
         <android.support.v7.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="27dp"
-            android:layout_marginRight="12dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="23dp"
+            android:layout_marginLeft="26dp"
+            android:layout_toRightOf="@id/image_username"
             android:text="+86"
             android:textColor="@color/main_text_black_dark"
-            android:textSize="@dimen/second_title_18" />
-
+            android:textSize="@dimen/sp_14"/>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginLeft="10dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:theme="@style/hintAppearance">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/edit_logup_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:gravity="center_vertical"
                 android:hint="请输入您的手机号码"
                 android:inputType="textPhonetic"
+                android:paddingBottom="23dp"
+                android:paddingLeft="74dp"
                 android:textColorHint="@color/main_text_gary_99"
-                android:textSize="@dimen/second_title_18"
-                tools:ignore="HardcodedText" />
+                android:textSize="@dimen/sp_14"
+                tools:ignore="HardcodedText"/>
         </android.support.design.widget.TextInputLayout>
-    </android.support.v7.widget.LinearLayoutCompat>
 
+    </RelativeLayout>
 
     <!--密码-->
-    <android.support.v7.widget.LinearLayoutCompat
+    <RelativeLayout
+        android:id="@+id/login_pass_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="41dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginRight="40dp">
+        android:layout_height="60dp"
+        android:layout_below="@id/login_name_layout"
+        android:layout_marginLeft="44dp"
+        android:layout_marginRight="44dp"
+        android:layout_marginTop="15dp">
 
         <android.support.v7.widget.AppCompatImageView
             android:layout_width="16dp"
             android:layout_height="18dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="2dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="23dp"
             android:scaleType="fitXY"
-            android:src="@mipmap/icon_login_password" />
+            android:src="@mipmap/icon_login_password"/>
+
+        <Button
+            android:id="@+id/tv_getnote"
+            android:layout_width="88dp"
+            android:layout_height="26dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="23dp"
+            android:background="@drawable/round_white_button_bg_login"
+            android:gravity="center"
+            android:text="获取验证码"
+            android:clickable="true"
+            android:focusable="true"
+            android:textColor="@color/main_text_orange"
+            android:textSize="@dimen/sp_14"/>
 
 
         <android.support.design.widget.TextInputLayout
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="25dp"
-            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:theme="@style/hintAppearance">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/edit_logup_note"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-
-                android:gravity="center_vertical"
                 android:hint="请输入您的验证码"
                 android:inputType="textPassword"
+                android:paddingBottom="23dp"
+                android:paddingLeft="42dp"
+                android:paddingRight="80dp"
                 android:textColorHint="@color/main_text_gary_99"
-                android:textSize="@dimen/third_title_16"
-                tools:ignore="HardcodedText" />
+                android:textSize="@dimen/sp_14"
+                tools:ignore="HardcodedText"/>
 
 
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/tv_getnote"
-            android:layout_width="81dp"
-            android:layout_height="31dp"
-            android:layout_gravity="center_vertical"
-            android:background="@mipmap/buttom_logup_getnote_orange"
-            android:gravity="center"
-            android:text="获取验证码"
-            android:textColor="@color/main_text_orange"
-            android:textSize="@dimen/forth_title_15" />
 
-
-    </android.support.v7.widget.LinearLayoutCompat>
+    </RelativeLayout>
 
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btn_sign_in"
         android:layout_width="match_parent"
         android:layout_height="41dp"
-        android:layout_marginLeft="41dp"
-        android:layout_marginTop="69dp"
+        android:layout_below="@id/login_pass_layout"
+        android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
+        android:layout_marginTop="68dp"
         android:background="@mipmap/buttom_login_gray"
         android:gravity="center"
         android:padding="12sp"
-        android:textSize="15sp"
         android:text="登录"
         android:textColor="@color/app_text_gray"
-        tools:ignore="HardcodedText" />
+        android:textSize="15sp"
+        tools:ignore="HardcodedText"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="142dp"
-        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="153dp"
         android:text="第三方登录"
         android:textColor="@color/app_text_dark"
-        android:textSize="@dimen/forth_title_15" />
+        android:textSize="@dimen/sp_12"/>
 
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="15dp">
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="94dp">
 
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/im_login_qq"
             android:layout_width="44dp"
             android:layout_height="44dp"
-            android:layout_gravity="center_vertical"
             android:scaleType="fitXY"
-            android:src="@mipmap/icon_login_qq" />
+            android:src="@mipmap/icon_login_qq"/>
 
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/im_login_weibo"
             android:layout_width="44dp"
             android:layout_height="44dp"
-            android:layout_gravity="center_vertical"
             android:layout_marginLeft="54dp"
             android:layout_marginRight="54dp"
             android:scaleType="fitXY"
-            android:src="@mipmap/icon_login_weibo" />
+            android:src="@mipmap/icon_login_weibo"/>
 
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/im_login_wechart"
             android:layout_width="44dp"
             android:layout_height="44dp"
-            android:layout_gravity="center_vertical"
             android:scaleType="fitXY"
-            android:src="@mipmap/icon_login_wechart" />
+            android:src="@mipmap/icon_login_wechart"/>
 
     </android.support.v7.widget.LinearLayoutCompat>
 
 
-</android.support.v7.widget.LinearLayoutCompat>
+</RelativeLayout>
