修复某些id是int的问题、 声音选择seekbar、 修复首页没沉浸问题

--- a/common_core/src/main/res/values/colors.xml
+++ b/common_core/src/main/res/values/colors.xml
@@ -30,6 +30,7 @@
     <color name="main_background_remind_gray">#80727272</color>
 
     <color name="main_c8">#C8C8C8</color>
+    <color name="color_c3">#c3c3c3</color>
     <color name="transparent">#00000000</color>
 
 
