--- a/common_bokang/src/main/res/layout/delegate_robot_setting_remind.xml
+++ b/common_bokang/src/main/res/layout/delegate_robot_setting_remind.xml
@@ -70,6 +70,41 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <com.example.yijia.ui.seekbar.RxSeekBar
+            android:id="@+id/seekbar4"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="33dp"
+            app:cellMode="other"
+            app:cells="5"
+            app:hideProgressHint="true"
+            app:hintBGHeight="28dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textView4"
+            app:layout_constraintTop_toTopOf="parent"
+            app:lineColorEdge="@color/color_c3"
+            app:lineColorSelected="@color/main_text_orange"
+            app:markTextArray="@array/robot_remind_voice_seek"
+            app:seekBarHeight="8dp"
+            app:seekBarMode="single"
+            app:textPadding="17dp"
+            app:textSize="12sp"
+            app:thumbSize="26dp" />
+
+        <TextView
+            android:id="@+id/vioce1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:text="音量"
+            android:textColor="@color/main_text_black_dark"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </android.support.constraint.ConstraintLayout>
 
     <android.support.v7.widget.RecyclerView
