--- a/common_bokang/src/main/res/values/colors.xml
+++ b/common_bokang/src/main/res/values/colors.xml
@@ -19,8 +19,10 @@
     <color name="text_3DC39A">#3DC39A</color>
     <color name="text_EC8B2F">#EC8B2F</color>
     <color name="text_FDBA63">#fdba63</color>
+    <color name="text_FDBF6F">#FDBF6F</color>
     <color name="COLOR_49A3E1">#49a3e1</color>
     <color name="COLOR_7AC2A7">#7ac2a7</color>
     <color name="COLOR_F3837E">#f3837e</color>
     <color name="COLOR_999999">#999999</color>
+    <color name="COLOR_efefef">#efefef</color>
 </resources>
