--- a/common_bokang/src/main/res/layout/item_robot_guardianship.xml
+++ b/common_bokang/src/main/res/layout/item_robot_guardianship.xml
@@ -46,7 +46,7 @@
         tools:text="妈妈的小壹" />
 
     <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/tv_d_liveness"
+        android:id="@+id/tv_tag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -65,6 +65,6 @@
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/iv_img"
-        app:layout_constraintStart_toEndOf="@+id/tv_d_liveness"
+        app:layout_constraintStart_toEndOf="@+id/tv_tag"
         tools:text="20" />
 </android.support.constraint.ConstraintLayout>
