--- a/common_bokang/src/main/res/layout/item_robot_setting_remind.xml
+++ b/common_bokang/src/main/res/layout/item_robot_setting_remind.xml
@@ -19,7 +19,7 @@
         tools:text="妈妈的小壹" />
 
     <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/tv_d_liveness"
+        android:id="@+id/tv_tag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -37,7 +37,7 @@
         android:layout_marginTop="5dp"
         android:textColor="@color/main_text_black_46"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/tv_d_liveness"
+        app:layout_constraintStart_toEndOf="@+id/tv_tag"
         app:layout_constraintTop_toBottomOf="@+id/tv_name"
         tools:text="每天 8:00～9:00" />
 
@@ -51,7 +51,7 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_d_liveness"
+        app:layout_constraintTop_toBottomOf="@+id/tv_tag"
         tools:text="在设置时间段，小壹会主动询问用户是否播放该娱乐内容" />
 
     <android.support.v7.widget.AppCompatTextView
