--- a/common_bokang/src/main/res/layout/item_robot_main_list.xml
+++ b/common_bokang/src/main/res/layout/item_robot_main_list.xml
@@ -46,13 +46,13 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/iv_img"
+        android:layout_marginEnd="15dp"
         tools:text="小壹在家"/>
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tv_relationship"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:text="本人"
         android:textColor="@color/main_text_black_46"
         android:textSize="16sp"
