--- a/common_bokang/src/main/res/values/colors.xml
+++ b/common_bokang/src/main/res/values/colors.xml
@@ -27,4 +27,5 @@
     <color name="COLOR_F3837E">#f3837e</color>
     <color name="COLOR_999999">#999999</color>
     <color name="COLOR_efefef">#efefef</color>
+    <color name="COLOR_8d8d8d">#8d8d8d</color>
 </resources>
