--- a/common_bokang/src/main/res/layout/delegate_index_yijia2.xml
+++ b/common_bokang/src/main/res/layout/delegate_index_yijia2.xml
@@ -40,7 +40,7 @@
                         android:paddingBottom="13dp"
                         android:text="{icon-yj-index-top-mine}"
                         android:textColor="@color/white"
-                        android:textSize="22sp" />
+                        android:textSize="21sp" />
 
                     <android.support.v7.widget.AppCompatTextView
                         android:layout_width="wrap_content"
@@ -61,34 +61,45 @@
                         android:paddingBottom="13dp"
                         android:text="{icon-yj-index-top-camera}"
                         android:textColor="@color/white"
-                        android:textSize="22sp" />
+                        android:textSize="21sp" />
 
                 </RelativeLayout>
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_marginBottom="50dp">
 
-                    <de.hdodenhof.circleimageview.CircleImageView
+                    <com.example.latte.ui.widget.RobotImageView
                         android:id="@+id/cimg_img"
-                        android:layout_width="56dp"
-                        android:layout_height="56dp"
+                        android:layout_width="70dp"
+                        android:layout_height="60dp"
                         android:layout_marginStart="15dp" />
 
                     <android.support.v7.widget.AppCompatTextView
                         android:id="@+id/tv_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
+                        android:layout_toRightOf="@id/cimg_img"
+                        android:layout_alignTop="@id/cimg_img"
                         android:layout_marginStart="14dp"
                         android:text="孟宪良"
                         android:textColor="@color/white"
                         android:textSize="20sp"
                         android:textStyle="bold"
                         tools:text="孟宪良" />
-                </LinearLayout>
+
+                    <android.support.v7.widget.AppCompatTextView
+                        android:id="@+id/tv_online"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBottom="@id/cimg_img"
+                        android:layout_alignLeft="@id/tv_name"
+                        android:textColor="@color/COLOR_8d8d8d"
+                        android:textSize="15sp"
+                        tools:text="@string/xy_online" />
+                </RelativeLayout>
             </RelativeLayout>
 
             <android.support.v7.widget.Toolbar
