--- a/common_bokang/src/main/res/layout/delegate_index_yijia2.xml
+++ b/common_bokang/src/main/res/layout/delegate_index_yijia2.xml
@@ -100,6 +100,75 @@
                         android:textSize="15sp"
                         tools:text="@string/xy_online" />
                 </RelativeLayout>
+                <HorizontalScrollView
+                    android:layout_alignParentBottom="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp">
+                        <android.support.v7.widget.AppCompatTextView
+                            android:id="@+id/zcjl"
+                            android:gravity="center"
+                            android:paddingStart="15dp"
+                            android:paddingEnd="15dp"
+                            android:paddingBottom="6dp"
+                            android:paddingTop="6dp"
+                            android:textSize="16sp"
+                            android:text="自测记录"
+                            android:textColor="@color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent" />
+                        <android.support.v7.widget.AppCompatTextView
+                            android:id="@+id/ctqm"
+                            android:gravity="center"
+                            android:paddingStart="15dp"
+                            android:paddingEnd="15dp"
+                            android:paddingBottom="6dp"
+                            android:paddingTop="6dp"
+                            android:textSize="16sp"
+                            android:text="常听曲目"
+                            android:textColor="@color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent" />
+                        <android.support.v7.widget.AppCompatTextView
+                            android:id="@+id/khjl"
+                            android:gravity="center"
+                            android:paddingStart="15dp"
+                            android:paddingEnd="15dp"
+                            android:paddingBottom="6dp"
+                            android:paddingTop="6dp"
+                            android:textSize="16sp"
+                            android:text="看护记录"
+                            android:textColor="@color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent" />
+                        <android.support.v7.widget.AppCompatTextView
+                            android:id="@+id/txjl"
+                            android:gravity="center"
+                            android:paddingStart="15dp"
+                            android:paddingEnd="15dp"
+                            android:paddingBottom="6dp"
+                            android:paddingTop="6dp"
+                            android:textSize="16sp"
+                            android:text="提醒记录"
+                            android:textColor="@color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent" />
+                        <android.support.v7.widget.AppCompatTextView
+                            android:id="@+id/qin"
+                            android:gravity="center"
+                            android:paddingStart="15dp"
+                            android:paddingEnd="15dp"
+                            android:paddingBottom="6dp"
+                            android:paddingTop="6dp"
+                            android:textSize="16sp"
+                            android:text="0位亲"
+                            android:textColor="@color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent" />
+                    </LinearLayout>
+                </HorizontalScrollView>
             </RelativeLayout>
 
             <android.support.v7.widget.Toolbar
