--- a/common_bokang/src/main/res/layout/item_family.xml
+++ b/common_bokang/src/main/res/layout/item_family.xml
@@ -10,10 +10,22 @@
         android:id="@+id/item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="15dp"
+        android:textColor="@color/app_text_dark"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <CheckBox
+        android:id="@+id/item_check"
+        android:layout_width="13dp"
+        android:layout_height="13dp"
+        android:layout_marginEnd="15dp"
+        android:button="@drawable/family_item_checkbox"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 
 </android.support.constraint.ConstraintLayout>
