--- a/common_bokang/src/main/res/layout/delegate_index_yijia2.xml
+++ b/common_bokang/src/main/res/layout/delegate_index_yijia2.xml
@@ -101,6 +101,7 @@
                         tools:text="@string/xy_online" />
                 </RelativeLayout>
                 <HorizontalScrollView
+                    android:scrollbars="none"
                     android:layout_alignParentBottom="true"
                     android:layout_width="match_parent"
                     android:layout_height="40dp">
