--- a/common_bokang/src/main/res/layout/item_family.xml
+++ b/common_bokang/src/main/res/layout/item_family.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:descendantFocusability="blocksDescendants"
     android:padding="10dp">
 
     <TextView
@@ -25,6 +26,7 @@
         android:button="@drawable/family_item_checkbox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 
