--- a/common_bokang/src/main/res/layout/delegate_index_yijia2.xml
+++ b/common_bokang/src/main/res/layout/delegate_index_yijia2.xml
@@ -109,6 +109,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="40dp">
                     <LinearLayout
+                        android:id="@+id/ll_top_item_layout"
                         android:layout_width="match_parent"
                         android:layout_height="40dp">
                         <android.support.v7.widget.AppCompatTextView
