--- a/common_bokang/src/main/res/layout/delegate_robot_list.xml
+++ b/common_bokang/src/main/res/layout/delegate_robot_list.xml
@@ -18,10 +18,12 @@
 
         <ImageView
             android:id="@+id/robot_list_add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="10dp"
+            android:scaleType="center"
+            android:background="@color/transparent"
             android:src="@mipmap/robot_list_add_parents"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
