--- a/common_bokang/src/main/res/layout/include_item_index_top_letter.xml
+++ b/common_bokang/src/main/res/layout/include_item_index_top_letter.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="1dp"
     android:background="@color/main_line_default_f5"/>
-    <de.hdodenhof.circleimageview.CircleImageView
+    <com.example.latte.ui.widget.RobotImageView
         android:id="@+id/civ_img"
         android:layout_width="27dp"
         android:layout_height="27dp"
