--- a/common_bokang/src/main/res/layout/delegate_find.xml
+++ b/common_bokang/src/main/res/layout/delegate_find.xml
@@ -154,6 +154,7 @@
         android:layout_marginTop="1dp"
         android:background="@color/white"
         android:gravity="center_vertical"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
