--- a/common_bokang/src/main/res/layout/delegate_mine.xml
+++ b/common_bokang/src/main/res/layout/delegate_mine.xml
@@ -56,11 +56,12 @@
                 android:id="@+id/remote_supervision"
                 android:layout_width="match_parent"
                 android:layout_height="68dp"
+                android:visibility="gone"
                 app:hasArrow="true"
                 app:iconDrawable="@mipmap/mine_yuancheng"
                 app:text="远程看护"
-                app:textSize="20sp"
-                app:textColor="@color/light_black"/>
+                app:textColor="@color/light_black"
+                app:textSize="20sp" />
 
             <com.example.latte.ui.widget.UserTextLineView
                 android:id="@+id/pro_card"
@@ -81,15 +82,17 @@
                 app:text="看护相册"
                 app:textSize="20sp"
                 app:textColor="@color/light_black"/>
+
             <com.example.latte.ui.widget.UserTextLineView
                 android:id="@+id/my_life"
                 android:layout_width="match_parent"
                 android:layout_height="68dp"
+                android:visibility="gone"
                 app:hasArrow="true"
                 app:iconDrawable="@mipmap/icon_mine_life"
                 app:text="生活语录"
-                app:textSize="20sp"
-                app:textColor="@color/light_black"/>
+                app:textColor="@color/light_black"
+                app:textSize="20sp" />
             <com.example.latte.ui.widget.UserTextLineView
                 android:id="@+id/my_message"
                 android:layout_width="match_parent"
@@ -109,15 +112,17 @@
                 app:text="我的家书"
                 app:textSize="20sp"
                 app:textColor="@color/light_black"/>
+
             <com.example.latte.ui.widget.UserTextLineView
                 android:id="@+id/my_friends"
                 android:layout_width="match_parent"
                 android:layout_height="68dp"
+                android:visibility="gone"
                 app:hasArrow="true"
                 app:iconDrawable="@mipmap/icon_mine_friends"
                 app:text="我的通讯录"
-                app:textSize="20sp"
-                app:textColor="@color/light_black"/>
+                app:textColor="@color/light_black"
+                app:textSize="20sp" />
 
             <com.example.latte.ui.widget.UserTextLineView
                 android:id="@+id/About_us"
