--- a/common_bokang/src/main/res/layout/delegate_find.xml
+++ b/common_bokang/src/main/res/layout/delegate_find.xml
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:text="亲友团"
+            android:text="亲友消息"
             android:textColor="@color/main_text_black_46"
             android:textSize="20sp" />
 
