--- a/common_bokang/src/main/res/layout/delegate_user_detail.xml
+++ b/common_bokang/src/main/res/layout/delegate_user_detail.xml
@@ -3,7 +3,7 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             android:background="@color/main_line_default_f5">
+                                             android:background="@color/main_background_default_f5">
 
     <include
         android:id="@+id/include"
@@ -50,6 +50,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/main_text_black_dark"
             android:textSize="@dimen/sp_16"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/user_detail_image"
             app:layout_constraintStart_toStartOf="@id/user_detail_name"/>
 
