--- a/common_bokang/src/main/res/layout/popup_listview.xml
+++ b/common_bokang/src/main/res/layout/popup_listview.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@android:color/white">
+    android:background="@drawable/radius5_background_white">
 
     <ListView
         android:id="@+id/listView"
