--- a/common_core/src/main/res/values/colors.xml
+++ b/common_core/src/main/res/values/colors.xml
@@ -33,6 +33,8 @@
     <color name="color_c3">#c3c3c3</color>
     <color name="transparent">#00000000</color>
 
+    <color name="robot_detail_color">#ec8b2f</color>
+
 
 
     <color name="round_corner_progress_bar_background_default">#5f5f5f</color>
